# vizzy2.0

./: LICENSE  README.md
vizzy_description/: CMakeLists.txt  package.xml
vizzy_description/plugins/: ros.gazebo.xacro
vizzy_description/robots/: vizzy.urdf.xacro  vizzy_base_only.urdf.xacro
vizzy_description/urdf/arm/: arm.gazebo.xacro  arm.transmission.xacro  arm.urdf.xacro
vizzy_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro
vizzy_description/urdf/sensors/: hokuyo_04lx_laser.gazebo.xacro  hokuyo_04lx_laser.urdf.xacro
vizzy_gazebo/: CMakeLists.txt  package.xml
vizzy_gazebo/launch/: camera_launch.xml  gazebo_launch.xml  vizzy_sim_world_launch.xml  vizzy_spawn.launch.py
vizzy_gazebo/worlds/: empty_world.sdf  isr_5th_floor_world.sdf  isr_7th_floor_table_and_objects_world.sdf  isr_7th_floor_test_world.sdf  isr_7th_floor_world.sdf
vizzy_launch/: CMakeLists.txt  package.xml
vizzy_launch/config/: custom_config.rviz
vizzy_launch/env-hooks/: env_loader.sh
vizzy_launch/launch/: rviz_launch.py  vizzy_real_launch.xml  vizzy_simulation_launch.xml
vizzy_msgs/: CMakeLists.txt  package.xml
vizzy_msgs/action/: Cartesian.action
vizzy_msgs/msg/: KokamBatteryPower.msg  Tactile.msg
vizzy_navigation/: CMakeLists.txt  package.xml
vizzy_navigation/config/: nav2_configuration.yaml  nav2_configuration_real.yaml
vizzy_navigation/launch/: navigation_launch.py
vizzy_navigation/src/: twistsimulator.cpp
vizzy_robot/: CMakeLists.txt  package.xml
vizzy_robot/launch/: auxiliary_vizzy_launch.py  auxiliary_vizzy_launch.xml  hokuyo_launch.xml  real_robot_launch.xml  segway_base_launch.xml
vizzy_sensors/: CMakeLists.txt  package.xml
vizzy_sensors/config/: hokuyo_filters.yaml
vizzy_sensors/include/vizzy_sensors/: footprint_filter.h  nan_to_inf_filter.h  scan_angle_filter.h
vizzy_sensors/launch/hokuyo/: hokuyo-filters_launch.xml
vizzy_sensors/src/: vizzy_sensors_filters.cpp
