<?xml version="1.0"?>
<package format="3">
  <name>vizzy_msgs</name>
  <version>0.0.0</version>
  <description>

    This package contains Vizzy's messages, actions and services. The files in this package are
    parsed and used by a variety of other components. Most users will not interact
    directly with this package.

    Acknowledgements:
    - Rui Fiqueiredo for the development of all the messages, actions and services for ROS 1.

  </description>

  <maintainer email="joao.penha.lopes@tecnico.ulisboa.pt">João Penha Lopes</maintainer>
  <maintainer email="joao.zenario@tecnico.ulisboa.pt">João Zenário</maintainer>

  <author>Rui Figueiredo</author>
  <author>João Penha Lopes</author>
  <author>João Zenário</author>
  
  <license>TODO</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>